@@ -3,10 +3,11 @@ package com.prjt2cs.project.model;
 import jakarta.persistence.*;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-import com.fasterxml.jackson.annotation.JsonBackReference;
 import com.fasterxml.jackson.annotation.JsonManagedReference;
+import com.fasterxml.jackson.annotation.JsonBackReference;
 
 @Entity
 @Table(name = "REP")
@@ -15,9 +16,6 @@ public class Report {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-
-    @Column(name = "REMARKS", length = 4000)
-    private String remarks;
 
     @Column(name = "PHASE")
     private String phase;
@@ -30,15 +28,6 @@ public class Report {
 
     @Column(name = "REPORT_DATE")
     private LocalDate date;
-    @Column(name = "ANOMALIES", length = 2000) 
-    private String anomalies; 
-
-    @Column(name = "EXPERT_ANALYSIS", length = 2000) 
-    private String expertAnalysis; 
-
-    @Column(name = "EXPERT_RECOMMENDATIONS", length = 2000) 
-    private String expertRecommendations; 
-
 
     @Column(name = "TVD")
     private Double tvd;
@@ -51,26 +40,37 @@ public class Report {
 
     @Column(name = "ACTUAL_DAY")
     private Double actualDay;
-    // AJOUTER ces champs dans votre modèle Report :
+
+    @Column(name = "REMARKS", length = 4000)
+    private String remarks;
 
     // Champs pour le fichier Excel
     @Lob
     @Column(name = "EXCEL_FILE")
     private byte[] excelFile;
 
+    // NOUVELLE RELATION AVEC PUIT
     @ManyToOne(fetch = FetchType.LAZY)
     @JoinColumn(name = "PUIT_ID", nullable = false)
     @JsonBackReference
     private Puit puit;
 
-    @OneToMany(mappedBy = "report", cascade = CascadeType.ALL, orphanRemoval = true)
+    @OneToMany(mappedBy = "report", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
     @JsonManagedReference
-    private List<Operation> operations = new ArrayList<>();
+    private List<Operation> operations;
 
     @OneToOne(cascade = CascadeType.ALL)
     @JoinColumn(name = "daily_cost_id")
     @JsonManagedReference
     private DailyCost dailyCost;
+
+    // Constructeurs
+    public Report() {
+    }
+
+    public Report(Puit puit) {
+        this.puit = puit;
+    }
 
     // Getters et Setters existants
     public Long getId() {
@@ -82,11 +82,11 @@ public class Report {
     }
 
     public void setRemarks(List<String> remarksList) {
-        this.remarks = String.join(";", remarksList);
+        this.remarks = remarksList != null ? String.join("|||", remarksList) : null;
     }
-    
+
     public List<String> getRemarks() {
-        return remarks != null ? List.of(remarks.split(";")) : new ArrayList<>();
+        return remarks != null ? Arrays.asList(remarks.split("\\|\\|\\|")) : new ArrayList<>();
     }
 
     public void setPhase(String phase) {
@@ -99,19 +99,11 @@ public class Report {
 
     public Double getDepth() {
         return depth;
-    }    
+    }
 
     public void setDepth(Double depth) {
         this.depth = depth;
     }
-// NOUVEAUX GETTERS ET SETTERS POUR PUIT
-public Puit getPuit() {
-    return puit;
-}
-
-public void setPuit(Puit puit) {
-    this.puit = puit;
-}
 
     public Double getDay() {
         return actualDay;
@@ -161,30 +153,6 @@ public void setPuit(Puit puit) {
         }
     }
 
-    public String getAnomalies() {
-        return anomalies;
-    }
-
-    public void setAnomalies(String anomalie) {
-        this.anomalies = anomalie;
-    }
-
-    public String getAnalysis() {
-        return expertAnalysis;
-    }
-
-    public void setAnalysis(String expertAnalysis) {
-        this.expertAnalysis = expertAnalysis;
-    } 
-    
-    public String getRecommendations() {
-        return expertRecommendations;
-    }
-
-    public void setRecommendations(String expertRecommendations) {
-        this.expertRecommendations = expertRecommendations;
-    }
-
     public Double getTvd() {
         return tvd;
     }
@@ -209,7 +177,7 @@ public void setPuit(Puit puit) {
         this.drillingHours = drillingHours;
     }
 
-    // Nouveaux getters et setters pour le fichier Excel
+    // Getters et setters pour le fichier Excel
     public byte[] getExcelFile() {
         return excelFile;
     }
@@ -218,14 +186,76 @@ public void setPuit(Puit puit) {
         this.excelFile = excelFile;
     }
 
-    // Méthodes utilitaires pour gérer le fichier Excel
+    // NOUVEAUX GETTERS ET SETTERS POUR PUIT
+    public Puit getPuit() {
+        return puit;
+    }
+
+    public void setPuit(Puit puit) {
+        this.puit = puit;
+    }
+
+    // Méthodes utilitaires
     public boolean hasExcelFile() {
         return excelFile != null && excelFile.length > 0;
     }
 
     public void clearExcelFile() {
         this.excelFile = null;
-
     }
 
+    @Column(name = "ANOMALIES", length = 2000)
+    private String anomalies;
+
+    @Column(name = "EXPERT_ANALYSIS", length = 2000)
+    private String expertAnalysis;
+
+    @Column(name = "EXPERT_RECOMMENDATIONS", length = 2000)
+    private String expertRecommendations;
+
+    @Column(name = "STATUS")
+private String status = "En attente";
+
+    public String getAnomalies() {
+        return anomalies;
+    }
+
+    public void setAnomalies(String anomalie) {
+        this.anomalies = anomalie;
+    }
+
+    public String getAnalysis() {
+        return expertAnalysis;
+    }
+
+    public void setAnalysis(String expertAnalysis) {
+        this.expertAnalysis = expertAnalysis;
+    }
+
+    public String getRecommendations() {
+        return expertRecommendations;
+    }
+
+    public void setRecommendations(String expertRecommendations) {
+        this.expertRecommendations = expertRecommendations;
+    }
+
+    public String getStatus() {
+        return status;
+    }
+    
+    public void setStatus(String status) {
+        this.status = status;
+    }
+    
+
+    // Méthode utilitaire pour obtenir l'ID du puit
+    public String getPuitId() {
+        return puit != null ? puit.getPuitId() : null;
+    }
+
+    // Méthode utilitaire pour obtenir le nom du puit
+    public String getPuitName() {
+        return puit != null ? puit.getPuitName() : null;
+    }
 }
